# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [6.2.5] - 2026-02-11

### Changed

- Atualizado `/fazendinha feira pedidos` para diminuir a poluição visual.
- Mensagens importantes são destacadas no `/cooldowns` agora.

### Fixed

- Corrigido erros ao mostrar pedidos da feira quando haviam muitos pedidos.
- Corrigido erro para criar pedido de troca de qualidade precária.

## [6.2.4] - 2026-02-11

### Changed

- O bônus para finalizar uma daily que não foi trocada foi aumentado de 5000 para 10000 estrelinhas.

### Fixed

- Corrigido gifs do comando `/matar` quando mencionava bots.
- Corrigido notificação de bônus de daily falando que a recompensa foi 0 estrelinhas. 
- Corrigido erros no comando `/notificações` quando o usuário tinha muitas notificações.

## [6.2.3] - 2026-02-10

### Added

- Criado novo comando `/fazendinha composteira`, transforme plantas boas e podres em fertilizantes!

### Changed

- Alterado a disposição dos campos da fazendinha no `/cooldowns` para melhor leitura.
- O cálculo de qualidade das plantas foi alterado para beneficiar mais a colheita rápida, e a melhor estação para planta.
- Dois novos campos foram adicionados na fazendinha. Libere com `/fazendinha administrar`.
- Diminuído tempo para as plantações apodrecerem.

## [6.2.2] - 2026-02-09

### Hotfix

- Corrigido problemas para resgatar pedidos da fazendinha.

### Changed

- O modal para editar a troca de um pedido de troca na feira agora mostra o preço base de sua escolha.

### Fixed

- Corrigido erro de escrita no botão de excluir dos pedidos de troca.

## [6.2.1] - 2026-02-09

### Added

- Adicionado uma daily para criar um pedido de troca na `/fazendinha feira trocas`.

### Changed
